# graphic_editor

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/opencv/: .gitignore  CMakeLists.txt
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/graphics_example/: MainActivity.kt
example/lib/: _main.dart  image_painter_example.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
lib/: graphics.dart  graphics_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  aixlog.hpp  aroundFilter.cpp  graphics.c  graphics.cpp  graphics.hpp
